room fix+ intro login + ui change

--- a/app/src/main/res/layout/fragment_post_add.xml
+++ b/app/src/main/res/layout/fragment_post_add.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".AddPostFragment">
+    tools:context=".feed.AddPostFragment">
 
     <ImageView
         android:id="@+id/addpost_imageView"
@@ -16,115 +17,89 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/addpost_title"
-        android:layout_width="342dp"
-        android:layout_height="53dp"
-        android:layout_marginEnd="12dp"
-        android:background="#8DFFFFFF"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/addTitle_tx"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/addTitle_tx" />
 
-    <TextView
-        android:id="@+id/addpost_tx"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="396dp"
+        android:layout_height="427dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:text="Post:"
-        android:textColor="#070707"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/addpost_post"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addTitle_tx" />
-
-    <EditText
-        android:id="@+id/addpost_post"
-        android:layout_width="325dp"
-        android:layout_height="152dp"
-        android:background="#8DFFFFFF"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/addpost_address"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.813"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addpost_title"
-        app:layout_constraintVertical_bias="0.461" />
+        app:layout_constraintTop_toBottomOf="@+id/addpost_imageView">
 
-    <EditText
-        android:id="@+id/addpost_address"
-        android:layout_width="287dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="12dp"
-        android:background="#8DFFFFFF"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/addstud_addresstv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/addstud_addresstv" />
 
-    <TextView
-        android:id="@+id/addstud_addresstv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="148dp"
-        android:text="Address"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addpost_tx" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/Title">
 
-    <TextView
-        android:id="@+id/addpost_pricetext"
-        android:layout_width="70dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
-        android:text="Price"
-        android:textColor="#FBFBFB"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/addpost_price"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addstud_addresstv" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/addpost_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/addpost_price"
-        android:layout_width="294dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="11dp"
-        android:background="#8DFFFFFF"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/addspost_save_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.794"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addpost_address"
-        app:layout_constraintVertical_bias="0.271" />
 
-    <TextView
-        android:id="@+id/addTitle_tx"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="56dp"
-        android:lineSpacingExtra="14sp"
-        android:text="Title:"
-        android:textColor="#0E0E0E"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addpost_imageView" />
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/Post">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/addpost_post"
+                android:layout_width="match_parent"
+                android:layout_height="213dp"
+                android:inputType="text"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/Address"
+            app:layout_constraintBottom_toBottomOf="@+id/addpost_price">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/addpost_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/Price">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/addpost_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <Button
         android:id="@+id/addpost_cancel_btn"
@@ -164,5 +139,8 @@
         android:src="@android:drawable/ic_menu_gallery"
         app:layout_constraintBottom_toBottomOf="@+id/addpost_imageView"
         app:layout_constraintStart_toStartOf="parent" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
