--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,21 +14,22 @@
         android:layout_width="178dp"
         android:layout_height="57dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="32dp"
         android:backgroundTint="#37AC2F"
         android:text="Log In"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#E5F2F3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.585"
+        app:layout_constraintHorizontal_bias="0.591"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginfrag_pass_txt" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2" />
 
     <Button
         android:id="@+id/loginfrag_register_btn"
         android:layout_width="177dp"
         android:layout_height="59dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="92dp"
         android:backgroundTint="#37AC2F"
         android:text="register"
@@ -41,63 +42,6 @@
         app:layout_constraintTop_toBottomOf="@+id/loginfrag_login_btn"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/loginfrag_userName_txt"
-        android:layout_width="356dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="12dp"
-        android:background="#81F6F0F0"
-        android:ems="10"
-        android:hint="user name"
-        android:inputType="textEmailAddress"
-        android:singleLine="false"
-        android:textColor="#050505"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.581"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="100dp"
-        android:text="username"
-        android:textColor="#070707"
-        android:textColorHint="#000000"
-        android:textColorLink="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <EditText
-        android:id="@+id/loginfrag_pass_txt"
-        android:layout_width="355dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="8dp"
-        android:background="#80FFFFFF"
-        android:ems="10"
-        android:hint="password"
-        android:inputType="textPassword"
-        android:shadowColor="#000000"
-        android:textColor="#000000"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.589"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
-        android:text="password"
-        android:textColor="#000000"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginfrag_userName_txt" />
 
     <TextView
         android:id="@+id/textView3"
@@ -114,5 +58,47 @@
         app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat2"
+        android:layout_width="411dp"
+        android:layout_height="149dp"
+        android:layout_marginTop="100dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        tools:layout_editor_absoluteX="0dp">
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/Username">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/loginfrag_userName_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:hint="@string/Password">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/loginfrag_pass_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
