--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,53 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
-    <fragment
-        android:id="@+id/loginFragment"
-        android:name="com.example.agrishare.LoginFragment"
-        android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
-        <action
-            android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_loginFragment_to_postListRvFragment"
-            app:destination="@id/postListRvFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/registerFragment"
-        android:name="com.example.agrishare.RegisterFragment"
-        android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
-        <action
-            android:id="@+id/action_registerFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_registerFragment_to_postListRvFragment"
-            app:destination="@id/postListRvFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/homeFragment"
-        android:name="com.example.agrishare.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
-        <argument
-            android:name="userName"
-            app:argType="string" />
-        <action
-            android:id="@+id/action_homeFragment_to_addPostFragment"
-            app:destination="@id/addPostFragment" />
-    </fragment>
+    app:startDestination="@id/postListRvFragment">
     <fragment
         android:id="@+id/addPostFragment"
-        android:name="com.example.agrishare.AddPostFragment"
+        android:name="com.example.agrishare.feed.AddPostFragment"
         android:label="AddPostFragment" />
     <fragment
         android:id="@+id/postListRvFragment"
-        android:name="com.example.agrishare.PostListRvFragment"
+        android:name="com.example.agrishare.feed.PostListRvFragment"
         android:label="fragment_posts_list"
         tools:layout="@layout/fragment_posts_list">
         <action
@@ -58,15 +19,10 @@
         <action
             android:id="@+id/action_postListRvFragment_to_postDetailsFragment"
             app:destination="@id/postDetailsFragment" />
-        <action
-            android:id="@+id/action_postListRvFragment_to_loginFragment"
-            app:destination="@id/loginFragment"
-            app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/postDetailsFragment"
-        android:name="com.example.agrishare.PostDetailsFragment"
+        android:name="com.example.agrishare.feed.PostDetailsFragment"
         android:label="PostDetailsFragment"
         tools:layout="@layout/fragment_post_details">
         <argument
