fix delete post & add post bool att

--- a/app/src/main/res/layout/fragment_post_add.xml
+++ b/app/src/main/res/layout/fragment_post_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".AddPostFragment">
+    tools:context=".feed.AddPostFragment">
 
     <ImageView
         android:id="@+id/addpost_imageView"
